# androidthings-pio

./: .gitmodules  .travis.yml  README.md  bintray.gradle  dependencies.gradle  gradle.properties  settings.gradle  versions.gradle
gradle/wrapper/: gradle-wrapper.properties
pio-softpwm/: CHANGELOG.md  README.md  build.gradle  mavenConfig.gradle
pio-softpwm/src/main/: AndroidManifest.xml
pio-softpwm/src/main/cpp/: CMakeLists.txt  jni_helpers.cpp  jni_helpers.h  native_debug.h  softpwm.cpp  softpwm.h
pio-softpwm/src/main/java/com/leinardi/android/things/pio/: SoftPwm.java
sample-softpwm/: README.md  build.gradle
sample-softpwm/src/main/: AndroidManifest.xml
sample-softpwm/src/main/java/com/leinardi/android/things/sample/softpwm/: SoftPwmActivity.java
sample-softpwm/src/main/res/values/: strings.xml
